cluster/kubernetes/apps/observability/grafana/ingress/grafana-http-route.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
  labels:
    route-label: external-dns-internal
spec:
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: grafana
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 8080
